--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^2.0.17
   cached_network_image: ^3.2.3
   google_maps_flutter: ^2.2.3
+  loading_animation_widget: ^1.2.0+4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
